# gumbo-query

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  Document.cpp  Parser.cpp
